crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__fevered_visions_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "Phase",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Draw",
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "target": {
            "type": "ScopedPlayer"
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "DealDamage",
            "amount": {
              "type": "Fixed",
              "value": 2
            },
            "target": {
              "type": "ScopedPlayer"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": {
            "type": "And",
            "conditions": [
              {
                "type": "ScopedPlayerMatches",
                "filter": {
                  "type": "Opponent"
                }
              },
              {
                "type": "QuantityCheck",
                "lhs": {
                  "type": "Ref",
                  "qty": {
                    "type": "HandSize",
                    "player": {
                      "type": "ScopedPlayer"
                    }
                  }
                },
                "comparator": "GE",
                "rhs": {
                  "type": "Fixed",
                  "value": 4
                }
              }
            ]
          },
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "sub_link": "SequentialSibling"
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": "End",
      "phase_fanout": "EachPlayer",
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "At the beginning of each player's end step, that player draws a card. If the player is your opponent and has four or more cards in hand, ~ deals 2 damage to that player.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
