crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__fog_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "PreventDamage",
        "amount": "All",
        "target": {
          "type": "Any"
        },
        "recipient_scope": {
          "type": "Single"
        },
        "scope": "CombatDamage"
      },
      "cost": null,
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
